# theme-rs

./: .gitignore  Cargo.toml  README.md  aesthetic.json
schemes/: aesthetic.json
src/: main.rs
