[package]
name = "theme-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
json = "0.12.4"
rgb = "0.8.36"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
